--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,7 @@
 <resources>
     <string name="app_name">GoogleBookFinder</string>
     <string name ="search_books"> Search Books</string>
+    <string name = "no_books"> No books found</string>
+    <string name = "no_internet"> No internet</string>
+    <string name = "key">  "key=AIzaSyA4IZbnt9bUnaoJzHLDYAMGjb_qCGg6SvM"</string>
 </resources>
