UI/ design enhancements

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name = "Create_account"> Create an account</string>
     <string name = "Settings"> Settings </string>
     <string name = "FAQ" > FAQ </string>
+    <string name = "login"> Login</string>
 </resources>
